# python-rsync-filter

./: .gitignore  LICENSE  README.adoc  README.md  derivation.nix  pyproject.toml
plan/: 9-explain-mode  9-trailing-whitepspace-warning
rsyncfilter/: src.py
tests/: test_simple_include_exclude.py
