[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsyncfilter"
description = "A Python module for parsing .rsync-filter files"
version = "2024.3.7.dev"
readme = {file = "README.adoc", content-type = "text/markdown" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Private :: Do Not Upload",
]
authors = [
  {name = "Preston Hunt", email = "me@prestonhunt.com"},
]
maintainers = [
  {name = "Preston Hunt", email = "me@prestonhunt.com"},
]

[project.urls]
Repository = "https://github.com/presto8/python-rsync-filter"

[tool.hatch.build.targets.wheel]
packages = ["rsyncfilter"]
